--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,109 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Lemonada&family=Lato:wght@400;900&family=Acme&family=Pacifico&family=Sacramento&display=swap');
+
+/* family=Ubuntu+Mono -- sub font*/
+/* Monofamily=Inter:wght@400;60  --main font*/
+/* ./src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+body::-webkit-scrollbar-track {
+    background: #0A192F;
+    border-radius: 10px;
+  }
+body::-webkit-scrollbar-thumb {
+    background: #495670;
+    border-radius: 10px;
+  }
+  body
+  {
+background-color: #0A192F;
+color: #fff;
+  }
+*{
+    margin: 0;
+    padding: 0;
+}
+@layer components{
+    .logo-font{
+        font-family: 'Sacramento', cursive;
+    }
+    .sub-font{
+        font-family: 'Lemonada', cursive;
+    }
+    .main-font-900{
+        font-family: 'Lato', sans-serif;
+        font-weight: 900;
+    }
+    .main-font-400{
+        font-family: 'Lato', sans-serif;
+        font-weight: 400;
+    }
+    .main-bg-color{
+        background-color: #0A192F;
+    }
+    .sub-bg-color{
+        background-color: #CCD6F6;
+    }
+    .sub-text-color{
+        color: #FEC400;
+    }
+    .main-text-color{
+        color: #CCD6F6;
+    }
+    .blur-navbar{
+        /* background-color: rgba(10, 25, 47, 0.85); */
+     backdrop-filter: blur(10px);
+     filter: none !important;
+    }
+    .blur-navbar-bg{
+         background-color: rgba(10, 25, 47, 0.85);
+         /* transition-duration: 500ms; */
+    }
+    .blur-navbar-bg-none{
+        background-color: rgba(10, 25, 47, 0.01);
+        /* transition-duration: 500ms; */
+   }
+    .blur-body-bg{
+        /* background-color: rgba(10, 25, 47,0.85); */
+        filter: blur(5px) brightness(0.7);
+        user-select: none;
+        
+        /* transition-duration: 200ms; */
+    }
+
+  .nav-shadow{
+    box-shadow: 0px 10px 30px -7px rgba(2,12,27,0.7);
+    -webkit-box-shadow: 0px 10px 30px -7px rgba(2,12,27,0.7);
+    -moz-box-shadow: 0px 10px 30px -7px rgba(2,12,27,0.7);
+  }
+  .nav-vertical-menu-shadow{
+    box-shadow: -10px 0px 30px -15px rgba(2,12,27,0.7);
+    -webkit-box-shadow: -10px 0px 30px -15px rgba(2,12,27,0.7);
+    -moz-box-shadow: -10px 0px 30px -15px rgba(2,12,27,0.7);
+  }
+  .h-500{
+     height:700px;
+  }
+  .max-w-100{
+max-width: 154px;
+  }
+  .w-600{
+    width: 600px;
+  }
+  .hide-icon{
+    display: none;
+  }
+  .show-icon:hover>.hide-icon{
+    display: flex;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+
+/* background-color: rgba(10, 25, 47, 0.85);
+       filter: blur(5px) brightness(0.7) */
